--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ body {
 
 #container {
     display: grid;
-    grid-template-columns: 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px;
-    grid-template-rows: 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px;
+    grid-template-columns: 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px;
+    grid-template-rows: 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px 40px;
+}
+
+#div256 {
+    background-image: url(' ../images/space-ship.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding-left: 4px;
 }
