--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     display: flex;
     align-items: center;
@@ -13,6 +18,7 @@ h1 {
     font-style: italic;
     font-size: 4.5rem;
     color: white;
+    margin: 1.5rem;
     text-shadow: 0 0 1px purple,
         0 0 6px purple,
         0 0 12px purple,
@@ -21,10 +27,22 @@ h1 {
     ;
 }
 
-
-.cells {
-    border: 1px solid white;
+h3 {
+    margin: 0 11rem;
 }
+
+
+#counters {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+    color: white;
+
+}
+
+
 
 #container {
     display: grid;
