--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    background-image: url('../images/space.jpg');
+    background: url('../videos/space.mp4');
     background-size: cover;
 }
 
@@ -28,7 +28,7 @@ h1 {
 }
 
 h3 {
-    margin: 0 11rem;
+    margin: 0 3rem;
 }
 
 
@@ -40,6 +40,36 @@ h3 {
     font-size: 2rem;
     color: white;
 
+}
+
+#message {
+    animation: flicker 6s linear infinite;
+}
+
+@keyframes flicker {
+    0% {
+        color: white;
+    }
+
+    20% {
+        color: purple;
+    }
+
+    40% {
+        color: green;
+    }
+
+    60% {
+        color: yellow;
+    }
+
+    80% {
+        color: red;
+    }
+
+    100% {
+        color: white;
+    }
 }
 
 
@@ -98,4 +128,116 @@ h3 {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+#background-video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+
+#intro {
+    color: white;
+    font-size: 6rem;
+    margin-top: 40vh;
+}
+
+#play-btn {
+    font-size: 3rem;
+    background-color: transparent;
+    color: white;
+    font-weight: bold;
+    margin-top: 3rem;
+    padding: .6rem 2.3rem;
+    cursor: pointer;
+    border-radius: 10px;
+    text-shadow: 0 0 1px purple,
+        0 0 2px purple,
+        0 0 4px purple,
+        0 0 6px purple,
+        0 0 8px purple;
+
+    border: 2px solid purple;
+    box-shadow:
+        0 0 5px purple,
+        0 0 10px purple,
+        0 0 20px purple,
+        0 0 40px purple;
+
+
+}
+
+#restart-btn {
+    font-size: 1rem;
+    background-color: transparent;
+    color: white;
+    font-weight: bold;
+    margin-top: 2rem;
+    padding: .6rem 2.3rem;
+
+    cursor: pointer;
+    border-radius: 10px;
+    text-shadow: 0 0 1px purple,
+        0 0 2px purple,
+        0 0 4px purple,
+        0 0 6px purple,
+        0 0 8px purple;
+
+    border: 2px solid purple;
+    box-shadow:
+        0 0 5px purple,
+        0 0 10px purple,
+        0 0 20px purple,
+        0 0 40px purple;
+}
+
+
+
+@media (max-width: 1000px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+        margin: 0 2rem;
+    }
+
+    #container {
+        display: grid;
+        grid-template-columns: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
+        grid-template-rows: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
+        border: 2px solid purple;
+        box-shadow:
+            0 0 4px purple,
+            0 0 8px purple,
+            0 0 30px purple,
+            0 0 60px purple;
+    }
+}
+
+@media (max-width: 735px) {
+    h1 {
+        margin-top: 3.5rem;
+        font-size: 1.7rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+        margin: 1rem 1rem 5rem 1rem;
+    }
+
+    #message {
+        position: absolute;
+        top: 180px;
+        font-size: 2rem;
+        left: 90px;
+    }
 }
